2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedPtr<T>::cast_static): implement
	(cast_dynamic): implement
	(cast_dynamic_throw): implement.

2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h}: New files replacing filelist.{cc,h}.  The
	files are now displayed in a directory tree which is much cooler.
	As a side effect, it's now way faster when searching thousands of
	files.

	* src/Makefile.am: s/filelist/filetree/
	* configure.ac: Use src/pcreshell.cc as unique source file.

	* src/fileio.{cc,h} (FileInfo): Introduce a file_count member
	variable that became necessary to support subdirectories.

	* src/mainwindow.{cc,h}: Use the new FileTree widget.

2002-11-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc: In on_find_files() and on_exec_search(), make
	sure the corresponding button is sensitive before starting the busy
	action.  This is necessary since these callbacks are invoked from
	the entries' signal_activate() too.

2002-11-04  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.{cc,h}: Minor code cleanup.  Add a few assertions
	and a couple of comments.

regexxer 0.1:

2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/Makefile.am: s/noinst_DATA/dist_noinst_DATA/ so that
	the pixmap files are included in the distribution.

2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.cc: Close and reopen the I/O channel when switching
	the encoding.  Changing encodings on the fly doesn't seem to work
	with older GLib releases.

2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc src/stringutils.cc: Be more tolerant about
	fucked up filenames.  Still show a (hopefully) annoying warning
	message, though.

2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc: Invoke file search respectively regex search
	on the entry widgets' signal_activate().

2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>
